Fixed stuff going out of viewport

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ body {
 	background-attachment: fixed;
 	height: 100vh;
 	width: 100vw;
-	padding: 15px;
 	grid-gap: 20px;
 	background-color: var(--bg-square-inner-color);
 	background-image: linear-gradient(90deg, var(--bg-square-edge-color) 49%, var(--bg-square-edge-color) 50%, rgba(0, 0, 0, 0) 51%, rgba(0, 0, 0, 0) 100%), linear-gradient(0, var(--bg-square-edge-color) 49%, var(--bg-square-edge-color) 50%, rgba(0, 0, 0, 0) 51%, rgba(0, 0, 0, 0) 100%), radial-gradient(circle, rgba(0, 0, 0, 0) 50%, var(--bg-square-edge-color) 100%);
@@ -279,10 +278,6 @@ body>div:hover::after {
 }
 
 @media only screen and (max-width: 1200px) {
-
-	#profileInfo_links {
-		font-size: initial;
-	}
 
 	body {
 		grid-template-columns: auto;
